# Uart_Board

./: .mxproject  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  uart_board_test.ioc
Core/Src/: main.c  tim.c  usart.c
User/: CMakeLists.txt
User/inc/: test.h
User/include/: test.h
User/src/: test.c
UserLib/: CMakeLists.txt
UserLib/include/: userlib.h
UserLib/src/: userlib.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
